[gd_scene load_steps=31 format=2]

[ext_resource path="res://Object/Arms/hit/hit_1.gd" type="Script" id=1]
[ext_resource path="res://Import/MagicBall/Fireball/fireball_11.png" type="Texture" id=2]
[ext_resource path="res://Import/MagicBall/attack3.png" type="Texture" id=3]
[ext_resource path="res://Import/MagicBall/Fireball/fireball_13.png" type="Texture" id=4]
[ext_resource path="res://Import/MagicBall/Fireball/fireball_14.png" type="Texture" id=5]
[ext_resource path="res://Import/MagicBall/Fireball/fireball_15.png" type="Texture" id=6]
[ext_resource path="res://Import/MagicBall/Fireball/fireball_12.png" type="Texture" id=7]
[ext_resource path="res://Import/MagicBall/ice/ice11.png" type="Texture" id=8]
[ext_resource path="res://Import/MagicBall/ice/ice10.png" type="Texture" id=9]
[ext_resource path="res://Import/MagicBall/ice/ice12.png" type="Texture" id=10]
[ext_resource path="res://Import/MagicBall/ice/ice13.png" type="Texture" id=11]
[ext_resource path="res://Import/MagicBall/ice/ice9.png" type="Texture" id=12]
[ext_resource path="res://Import/MagicBall/ice/ice8.png" type="Texture" id=13]
[ext_resource path="res://Import/MagicBall/comet/comet11.png" type="Texture" id=14]
[ext_resource path="res://Import/MagicBall/comet/comet12.png" type="Texture" id=15]
[ext_resource path="res://Import/MagicBall/comet/comet13.png" type="Texture" id=16]
[ext_resource path="res://Import/MagicBall/comet/comet14.png" type="Texture" id=17]
[ext_resource path="res://Import/MagicBall/comet/comet9.png" type="Texture" id=18]
[ext_resource path="res://Import/MagicBall/comet/comet10.png" type="Texture" id=19]
[ext_resource path="res://Import/Music/DarkBall.wav" type="AudioStream" id=20]
[ext_resource path="res://Import/Music/FireBall.wav" type="AudioStream" id=21]
[ext_resource path="res://Import/Music/IceBall.wav" type="AudioStream" id=22]
[ext_resource path="res://Import/Music/Sword.wav" type="AudioStream" id=23]

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 64, 128, 64 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "DarkBall",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "FireBall",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "IceBall",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Stear",
"speed": 5.0
} ]

[node name="hit" type="Node2D"]
position = Vector2( 45, -24 )
z_index = 4096
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 27 )
animation = "DarkBall"
speed_scale = 1.5

[node name="FireBall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -20.0

[node name="IceBall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -20.0

[node name="DarkBall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -20.0

[node name="MonsterHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
